--- a/style.css
+++ b/style.css
@@ -27,13 +27,20 @@ h2{
 .box{
         flex: 1 1 500px;
 }
+.recipie-box{
+        flex: 1 1 300px;
+        box-shadow: 10px 10px 40px black;
+        margin: 5% 3%;
+        border-radius: 15px;
+        padding: 1.85% 1.5%;
+}
 .headline{
         padding: 5% 0;
         padding-right: 5%;
 }
 .btn{
         text-decoration: none;
-        padding: 10px 30px;
+        padding: 15px 40px;
         background-image: linear-gradient(180deg, rgb(255, 208, 0), rgb(253, 80, 48));
         color: white;
         border-radius: 25px;
@@ -54,5 +61,9 @@ h2{
         text-align: center;
         width: 50%;
         margin: 0 auto;
-        padding: 5% 0;
+        padding-top: 5%;
+}
+.recipie-box img{
+        width: 100%;
+        height: 62%;
 }
