--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
         padding-top: 3%;
         display: flex;
         flex-wrap: wrap;
-
 }
 h1{
         font-size: 50px;
@@ -66,4 +65,28 @@ h2{
 .recipie-box img{
         width: 100%;
         height: 62%;
+}
+#subscribe-section{
+        width: 85%;
+        margin: 0 auto;
+        box-shadow: 10px 10px 40px black;
+        border-radius: 20px;
+        padding: 2% 0;
+        display: flex;
+        flex-wrap: wrap;
+}
+.subscriber{
+        flex: 1 1 300px;
+        text-align: center;
+}
+footer{
+        background-color: black;
+        margin-top: 5%;
+        padding: 8% 0;
+}
+#footer-text{
+        width: 60%;
+        margin: 0 auto;
+        text-align: center;
+        color: white;
 }
