--- a/style.css
+++ b/style.css
@@ -20,9 +20,21 @@ h1{
 h2{
         font-size: 40px;
 }
+.site-name{
+        padding-right: 40%;
+        font-size: 25px;
+        color: #f2f2f2;
+        font-weight: bold;
+        cursor: pointer;
+}
+
 .navigation{
-        width: 70%;
-        margin: 2% auto;
+        width: 90%;
+        margin: 4px auto;
+        padding-top: 10px;
+        height: 55px;
+        border-radius: 10px;
+        background-image: linear-gradient(180deg, rgb(255, 153, 0), rgb(253, 80, 48));
 }
 .navigation ul {
         list-style-type: none;
@@ -32,18 +44,19 @@ h2{
       
 .navigation li {
         display: inline;
-        margin: 2%;
+        margin-right: 3%;
 }
 .navigation ul li a{
         text-decoration: none;
-        color: black;
-        font-weight: bold;
+        color: rgb(5, 5, 5);
+        font-weight: 500;
         font-size: 20px;
+        margin-top: 3%;
 }
 .navigation ul li a:hover{
-        color: orangered;
-        background: gray;
-        padding: 8px;
+        color: white;
+        background: black;
+        padding: 5px;
         border-radius: 5px;
 }
 .half-width img{
@@ -58,6 +71,9 @@ h2{
         margin: 5% 3%;
         border-radius: 15px;
         padding: 1.85% 1.5%;
+}
+.recipies-part{
+        padding-bottom: 5%;
 }
 .headline{
         padding: 5% 0;
@@ -92,6 +108,44 @@ h2{
         width: 100%;
         height: 62%;
 }
+#order{
+        border-radius: 5px;
+        background-color: #f2f2f2;
+        padding: 20px;
+        margin: 5%;
+        width: 90%;
+        margin: 0 auto;   
+}
+#order h2{
+        text-align: center;
+        color: orangered;
+        padding: 20px 0;
+}
+.submit{
+        background-image: linear-gradient(180deg, rgb(255, 123, 0), rgb(253, 80, 48));
+        font-size: 25px;
+        font-weight: 700;
+}
+input[type=text], select {
+        width: 100%;
+        padding: 12px 20px;
+        margin: 8px 0;
+        display: inline-block;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+        box-sizing: border-box;
+      }
+      
+      input[type=submit] {
+        width: 100%;
+        background-color: #4CAF50;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
 #subscribe-section{
         width: 85%;
         margin: 0 auto;
@@ -106,6 +160,7 @@ h2{
         flex: 1 1 300px;
         text-align: center;
 }
+
 footer{
         background-color: black;
         margin-top: 5%;
