--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
 }
 h1{
         font-size: 50px;
+        color: rgba(45, 37, 37, 0.802);
 }
 h2{
         font-size: 40px;
@@ -58,6 +59,9 @@ h2{
         background: black;
         padding: 5px;
         border-radius: 5px;
+}
+.orange{
+        color: orangered;
 }
 .half-width img{
         width: 70%;
@@ -162,7 +166,10 @@ input[type=text], select {
 }
 
 footer{
-        background-color: black;
+        background-image: url(images/footer-bg.png);
+        background-size: cover;
+        height: 100%;
+        background-repeat: none;
         margin-top: 5%;
         padding: 6% 0;
 }
