--- a/style.css
+++ b/style.css
@@ -21,6 +21,9 @@ h1{
 h2{
         font-size: 40px;
 }
+#main{
+        padding-top: 2%;
+}
 .site-name{
         padding-right: 40%;
         font-size: 25px;
@@ -31,11 +34,14 @@ h2{
 
 .navigation{
         width: 90%;
-        margin: 4px auto;
+        margin: 0 5%;
         padding-top: 10px;
         height: 55px;
         border-radius: 10px;
         background-image: linear-gradient(180deg, rgb(255, 153, 0), rgb(253, 80, 48));
+        position: fixed;
+        top: 0;
+        overflow: hidden;
 }
 .navigation ul {
         list-style-type: none;
